--- a/mongodb-with-pv/pv.yaml
+++ b/mongodb-with-pv/pv.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: host-pv
+  name: mongo-pv
 spec:
   capacity:
     storage: 1Gi
@@ -10,5 +10,5 @@ spec:
   accessModes:
     - ReadWriteOnce
   hostPath:
-    path: /test
+    path: /var/mongodb
     type: DirectoryOrCreate
