--- a/mongodb-with-pv/pvc.yaml
+++ b/mongodb-with-pv/pvc.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: host-pvc
+  name: mongo-pvc
 spec:
-  volumeName: host-pv
+  volumeName: mongo-pv
   storageClassName: standard
   accessModes:
     - ReadWriteOnce
