--- a/photo-gallery-with-pv/pv.yaml
+++ b/photo-gallery-with-pv/pv.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: host-pv
+  name: photo-gallery-pv
 spec:
   capacity:
     storage: 1Gi
@@ -10,5 +10,5 @@ spec:
   accessModes:
     - ReadWriteOnce
   hostPath:
-    path: /d/micple.com/ks8/node-file-demo-20250212T110850Z-001/node-file-demo/store
+    path: /var/photo-gallery
     type: DirectoryOrCreate
