--- a/photo-gallery-with-pv/pvc.yaml
+++ b/photo-gallery-with-pv/pvc.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: host-pvc
+  name: photo-gallery-pvc
 spec:
-  volumeName: host-pv
+  volumeName: photo-gallery-pv
   storageClassName: standard
   accessModes:
     - ReadWriteOnce
