--- a/micple-k8s-configs/deployment/panel/frontend/25-balance.yaml
+++ b/micple-k8s-configs/deployment/panel/frontend/25-balance.yaml
@@ -1,33 +1,35 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: panel-home
+  name: panel-balance
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: panel-home
+      app: panel-balance
   template:
     metadata:
       labels:
-        app: panel-home
+        app: panel-balance
     spec:
       containers:
-      - name: panel-home
-        image: saimonpranta/panel-0-home:latest
+      - name: panel-balance
+        image: saimonpranta/25-balance:latest
         imagePullPolicy: Always
         ports:
-        - containerPort: 3100 
+        - containerPort: 3125
+      nodeSelector:
+        kubernetes.io/hostname: k3s-worker-1
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: panel-home-service
+  name: panel-balance-service
 spec:
   selector:
-    app: panel-home
+    app: panel-balance
   ports:
     - protocol: TCP
       port: 80
-      targetPort: 3100
+      targetPort: 3125
   type: ClusterIP
