--- a/micple-k8s-configs/deployment/panel/frontend/44-futures.yaml
+++ b/micple-k8s-configs/deployment/panel/frontend/44-futures.yaml
@@ -1,33 +1,33 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: panel-home
+  name: panel-futures
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: panel-home
+      app: panel-futures
   template:
     metadata:
       labels:
-        app: panel-home
+        app: panel-futures
     spec:
       containers:
-      - name: panel-home
-        image: saimonpranta/panel-0-home:latest
+      - name: panel-futures
+        image: saimonpranta/44-futures:latest
         imagePullPolicy: Always
         ports:
-        - containerPort: 3100 
+        - containerPort: 3144
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: panel-home-service
+  name: panel-futures-service
 spec:
   selector:
-    app: panel-home
+    app: panel-futures
   ports:
     - protocol: TCP
       port: 80
-      targetPort: 3100
+      targetPort: 3144
   type: ClusterIP
