--- a/micple-k8s-configs/deployment/panel/frontend/48-donations.yaml
+++ b/micple-k8s-configs/deployment/panel/frontend/48-donations.yaml
@@ -1,33 +1,35 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: panel-home
+  name: panel-donations
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: panel-home
+      app: panel-donations
   template:
     metadata:
       labels:
-        app: panel-home
+        app: panel-donations
     spec:
       containers:
-      - name: panel-home
-        image: saimonpranta/panel-0-home:latest
+      - name: panel-donations
+        image: saimonpranta/48-donations:latest
         imagePullPolicy: Always
         ports:
-        - containerPort: 3100 
+        - containerPort: 3148
+      nodeSelector:
+        kubernetes.io/hostname: k3s-worker-1
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: panel-home-service
+  name: panel-donations-service
 spec:
   selector:
-    app: panel-home
+    app: panel-donations
   ports:
     - protocol: TCP
       port: 80
-      targetPort: 3100
+      targetPort: 3148
   type: ClusterIP
